# ObjectSegmentation3D

./: CMakeLists.txt
data/: hand.ply  hands.ply  noise_hand.ply
src/: ObjectSegmentation3D.cpp
